scrum-7 fix spacing urls

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,10 +6,10 @@
   .login {
     ul {
       display: flex;
-      gap: 1.25rem;
+      gap: 3rem;
       li {
         list-style-type: none;
-        font-size: 1.25rem;
+        font-size: 1.12rem;
         a {
           text-decoration: none;
           color: #37375a;
